Wraps rows of orgs, fixes minor graphical issues

--- a/app/assets/stylesheets/_account.scss
+++ b/app/assets/stylesheets/_account.scss
@@ -43,6 +43,7 @@
 .org-item {
   display: inline-block;
   margin-right: 24px;
+  margin-bottom: 10px;
   padding-right: 24px;
   border: 1px solid $borderColor;
   border-radius: 4px;
@@ -70,7 +71,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: 140px;
+  width: 141px;
 }
 
 .orgs-container {
@@ -99,6 +100,7 @@
 .orgs {
   @include display(flex);
   justify-content: center;
+  flex-flow: row wrap;
   .link-to-profile {
     &:hover {
       text-decoration: none;
